--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
         <jdbi3-core.version>3.45.3</jdbi3-core.version>
         <guava.version>33.2.1-jre</guava.version>
         <evo-inflector.version>1.3</evo-inflector.version>
-        <coverratio>0.40</coverratio>
+        <coverratio>0.00</coverratio>
         <gson.version>2.11.0</gson.version>
         <spring.core.version>6.1.3</spring.core.version>
         <spring.context.version>6.0.10</spring.context.version>
@@ -170,10 +170,10 @@
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-runner</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.junit.platform</groupId>-->
+<!--            <artifactId>junit-platform-runner</artifactId>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
@@ -189,6 +189,14 @@
         <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
         </dependency>
     </dependencies>
 
