--- a/pom.xml
+++ b/pom.xml
@@ -19,13 +19,13 @@
         <assertj.version>3.24.2</assertj.version>
         <disruptor.version>4.0.0</disruptor.version>
         <mockito.version>5.12.0</mockito.version>
-        <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
+        <maven-surefire-plugin.version>3.3.1</maven-surefire-plugin.version>
         <jacoco.version>0.8.12</jacoco.version>
         <slf4j.version>2.0.12</slf4j.version>
         <log4j.version>2.23.1</log4j.version>
-        <maven.enforcer.plugin.version>3.4.1</maven.enforcer.plugin.version>
+        <maven.enforcer.plugin.version>3.5.0</maven.enforcer.plugin.version>
         <maven.assembly.plugin.version>3.7.1</maven.assembly.plugin.version>
-        <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
+        <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
         <mysql-connector-java.version>8.0.33</mysql-connector-java.version>
         <jdbi3-core.version>3.45.3</jdbi3-core.version>
         <guava.version>33.2.1-jre</guava.version>
@@ -217,7 +217,7 @@
                         <archive>
                             <manifest>
                                 <!-- TUTAJ USTAWIASZ MAINA-->
-                                <mainClass>com.app.XX</mainClass>
+                                <mainClass>com.app.App</mainClass>
                             </manifest>
                         </archive>
                         <descriptorRefs>
@@ -334,12 +334,7 @@
         </pluginManagement>
         <plugins>
             <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
+                <artifactId>maven-assembly-plugin</artifactId>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -348,6 +343,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
