--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,10 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>22</java.version>
-        <lombok.version>1.18.32</lombok.version>
+        <lombok.version>1.18.34</lombok.version>
         <junit.version>5.10.2</junit.version>
         <junit-platform.version>1.10.2</junit-platform.version>
-        <assertj.version>3.24.2</assertj.version>
+        <assertj.version>3.26.3</assertj.version>
         <disruptor.version>4.0.0</disruptor.version>
         <mockito.version>5.12.0</mockito.version>
         <maven-surefire-plugin.version>3.3.1</maven-surefire-plugin.version>
@@ -33,11 +33,13 @@
         <coverratio>0.00</coverratio>
         <gson.version>2.11.0</gson.version>
         <spring.core.version>6.1.3</spring.core.version>
-        <spring.context.version>6.0.10</spring.context.version>
+        <spring.context.version>6.0.11</spring.context.version>
         <javax.annotation.api.version>1.3.2</javax.annotation.api.version>
         <spark.version>2.9.4</spark.version>
         <mysql.testcontainers.version>1.20.0</mysql.testcontainers.version>
         <jdbi.version>3.45.2</jdbi.version>
+        <jakarta.version>4.0.2</jakarta.version>
+        <sun.version>4.0.5</sun.version>
     </properties>
 
     <dependencyManagement>
@@ -151,6 +153,17 @@
                 <version>${jdbi.version}</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>jakarta.xml.bind</groupId>
+                <artifactId>jakarta.xml.bind-api</artifactId>
+                <version>${jakarta.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sun.xml.bind</groupId>
+                <artifactId>jaxb-impl</artifactId>
+                <version>${sun.version}</version>
+                <scope>runtime</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <dependencies>
@@ -225,6 +238,14 @@
         <dependency>
             <groupId>org.jdbi</groupId>
             <artifactId>jdbi3-testcontainers</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
         </dependency>
     </dependencies>
 
