--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 db.url=jdbc:mysql://localhost:3307/db_1?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 db.user=user
 db.password=user1234
-agencies.file = agencies.json
+agencies.file=agencies.json
+countries.file=countries.json
+tours.file=tours.json
