Implemented xml and json file reading with tests update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ db.password=user1234
 agencies.file=agencies.json
 countries.file=countries.json
 tours.file=tours.json
+agencies.format=json
+countries.format=json
+tours.format=json
